# lcf-inference

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
Aurora/: README.md  index.html  start_instance.sh  vllm.md  vllm.pbs  vllm.pbs~
Frontier/: README.md  index.html  vllm.md~
cli/: index.html
configuration/: index.html
docs/: cli.md  configuration.md  getting-started.md  index.md  models.md  roadmap.md
getting-started/: index.html
models/: index.html
roadmap/: index.html
search/: search_index.json
src/aegis/: cli.py  config.py  heartbeat.py  launcher.py  scheduler.py
src/aegis/registry/: __init__.py  service_registry.py
src/aegis/templates/: instance.sh.j2  pbs_job.sh.j2
tools/: Makefile  bcast.c  start_redis.sh  stop_redis.sh
